# pico-photo-clock

./: .gitignore  CMakeLists.txt  README.md  TODO  config.h  main.c  ppc-resize.pl  version.h
binaries/: pico-photo-clock.uf2
drivers/ds3231/src/: ds3231.c
drivers/sdcard/include/sdcard/: sdcard.h
drivers/sdcard/src/: sdcard.c
drivers/waveshare_lcd/include/waveshare_lcd/: waveshare_lcd.h
drivers/waveshare_lcd/src/: wslcd.c
files/include/files/: files.h
files/src/: files.c
fs/interface/src/: stubs_arms.c  stubs_host.c
gfx/include/gfx/: clock.h  fonthandler.h  gfxconsole.h
gfx/src/: .dejavu_sans_mono_72.c.swp  clock.c  courier_bold_36.c  courier_bold_36.h  courier_bold_72.c  courier_bold_72.h  dejavu_sans_mono_36.c  dejavu_sans_mono_36.h  dejavu_sans_mono_72.c  dejavu_sans_mono_72.h  fonthandler.c  gfxconsole.c  makefont.pl  picojpeg.c
klib/include/klib/: list.h
klib/src/: list.c  string.c
log/include/log/: log.h
log/src/: log.c
screens/include/screens/: photoclock.h  settings.h
screens/src/: photoclock.c  settings.c
